Save current state before modernization